--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -31,6 +31,11 @@ a, ul{
 .icon{
   height: 32px;
   width: 20px;
+  
+  @media only screen and (max-width: 700px) {
+    height: 24px;
+    width: 15px;
+  }
 }
 
 .icon:hover{
