--- a/frontend/src/components/clock-item/clock-items.styles.scss
+++ b/frontend/src/components/clock-item/clock-items.styles.scss
@@ -2,9 +2,16 @@ h4 {
     font-size: 16px;
 }
 
+h5{
+    font-size: 14px;
+    @media only screen and (max-width: 700px) {
+        font-size: 12px;
+    }
+}
+
 .times-grid {
     display: grid;
-    grid-template-columns: 24% 15.25% 15.25% 15.25% 15.25% 15%;
+    grid-template-columns: 22% 16% 13.25% 13.25% 10.5% 12% 13%;
 }
 
 .grid-line {
