--- a/frontend/src/components/clock-item/clock-items.styles.scss
+++ b/frontend/src/components/clock-item/clock-items.styles.scss
@@ -9,6 +9,15 @@ h5{
     }
 }
 
+.date-form{
+    max-width: 450px;
+    margin-left: auto;
+    // margin-left: 30%;
+    // @media only screen and (min-width: 700px) {
+    //     margin-left: 40%;
+    // }
+}
+
 .times-grid {
     display: grid;
     grid-template-columns: 22% 16% 13.25% 13.25% 10.5% 12% 13%;
