--- a/frontend/src/containers/invoice/invoice.styles.scss
+++ b/frontend/src/containers/invoice/invoice.styles.scss
@@ -14,6 +14,16 @@ h5{
     margin-left: auto;
 }
 
+.date-range{
+    margin-bottom: 0;
+    @media only screen and (max-width: 1000px) {
+        margin-top: 17px;
+    }
+    @media only screen and (max-width: 700px) {
+        margin-top: 4px;
+    }
+}
+
 .invoice-grid {
     display: grid;
     grid-template-columns: 22% 16% 13.25% 13.25% 10.5% 12% 13%;
