--- a/frontend/src/containers/customer/customer.styles.scss
+++ b/frontend/src/containers/customer/customer.styles.scss
@@ -14,12 +14,8 @@ h5{
     margin-left: auto;
 }
 
-.date-range{
+.company-name{
     margin-bottom: 0;
-    margin-top: 23px;
-    @media only screen and (max-width: 1000px) {
-        margin-top: 17px;
-    }
     @media only screen and (max-width: 700px) {
         margin-top: 9px;
     }
